// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-loader Should render component with locale: fr 1`] = `
<mg-loader lang="fr">
  <mock:shadow-root>
    <div aria-live="polite" class="mg-c-loader">
      <mg-icon icon="loader" spin=""></mg-icon>
      <span>
        Chargement en cours...
      </span>
    </div>
  </mock:shadow-root>
</mg-loader>
`;

exports[`mg-loader Should render component with locale: xx 1`] = `
<mg-loader lang="xx">
  <mock:shadow-root>
    <div aria-live="polite" class="mg-c-loader">
      <mg-icon icon="loader" spin=""></mg-icon>
      <span>
        Loading in progress...
      </span>
    </div>
  </mock:shadow-root>
</mg-loader>
`;

exports[`mg-loader with args { message: 'new loader message' } 1`] = `
<mg-loader>
  <mock:shadow-root>
    <div aria-live="polite" class="mg-c-loader">
      <mg-icon icon="loader" spin=""></mg-icon>
      <span>
        new loader message
      </span>
    </div>
  </mock:shadow-root>
</mg-loader>
`;

exports[`mg-loader with args { messageHide: true } 1`] = `
<mg-loader>
  <mock:shadow-root>
    <div aria-live="polite" class="mg-c-loader">
      <mg-icon icon="loader" spin=""></mg-icon>
      <span class="mg-u-visually-hidden">
        Loading in progress...
      </span>
    </div>
  </mock:shadow-root>
</mg-loader>
`;

exports[`mg-loader with args {} 1`] = `
<mg-loader>
  <mock:shadow-root>
    <div aria-live="polite" class="mg-c-loader">
      <mg-icon icon="loader" spin=""></mg-icon>
      <span>
        Loading in progress...
      </span>
    </div>
  </mock:shadow-root>
</mg-loader>
`;
